--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 
-    "description": "Adds checkboxes next to each post on https://hckrnews.com/, copies selected checkboxes to clipboard. Currently in beta due to front-end imperfection.",
+    "description": "Adds checkboxes next to each post on https://hckrnews.com/, copies selected checkboxes to clipboard.",
     "manifest_version": 2,
     "author": "Petr Kubelka",
     "name": "Hckrnews links",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "homepage_url": "https://github.com/ksonny4/hn-posts-copy",
 
     "content_scripts": [{
